Fixed a lot of bugs

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -152,8 +152,7 @@
             <div class="row justify-content-around">
                 <div class="col-md-4 text-center">
                     <div class="h5"
-                         i18n>Sprache
-                    </div>
+                         i18n>Sprache</div>
                     <a href="{{ baseurl }}"
                        class="footer-link"
                        i18n>Deutsch</a>
@@ -178,8 +177,8 @@
                                class="footer-link"
                                i18n>Allgemeine Geschäfts- <br>und Nutzungsbedingungen</a></li>
                     </ul>
-                    <p class="text-muted"
-                       i18n>Version: {{ appVersion.branch }}/{{ appVersion.version }}</p>
+                    <p class="text-muted">
+                        <span i18n>Version</span>: {{ appVersion.branch }}/{{ appVersion.version }}</p>
                 </div>
             </div>
         </footer>
