--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -91,32 +91,30 @@
                                   i18n>Abgeschlossen</span>
                             <span *ngIf="taskSort && taskSort === 'submitted'">
                                 <span *ngIf="taskOrder === 'asc'">
-                                    <svg 
-                                        width="1em"
-                                        height="0.8em"
-                                        viewBox="0 1.2 16 16"
-                                        class="bi bi-arrow-up"
-                                        role="button"
-                                        aria-hidden="true">
+                                    <svg width="1em"
+                                         height="0.8em"
+                                         viewBox="0 1.2 16 16"
+                                         class="bi bi-arrow-up"
+                                         role="button"
+                                         aria-hidden="true">
                                         <path
-                                            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+                                              d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
                                     </svg>
                                     <span class="sr-only"
-                                        i18n>Aufsteigend sortiert</span>
+                                          i18n>Aufsteigend sortiert</span>
                                 </span>
                                 <span *ngIf="taskOrder === 'desc'">
-                                    <svg 
-                                        width="1em"
-                                        height="0.8em"
-                                        viewBox="0 1.2 16 16"
-                                        class="bi bi-arrow-down"
-                                        role="button"
-                                        aria-hidden="true">
+                                    <svg width="1em"
+                                         height="0.8em"
+                                         viewBox="0 1.2 16 16"
+                                         class="bi bi-arrow-down"
+                                         role="button"
+                                         aria-hidden="true">
                                         <path
-                                            d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                                              d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
                                     </svg>
                                     <span class="sr-only"
-                                        i18n>Absteigend sortiert</span>
+                                          i18n>Absteigend sortiert</span>
                                 </span>
                             </span>
                         </th>
@@ -128,16 +126,16 @@
                             <span *ngIf="taskSort && taskSort === 'created'">
                                 <span *ngIf="taskOrder === 'asc'">
                                     <svg width="1em"
-                                        height="0.8em"
-                                        viewBox="0 1.2 16 16"
-                                        class="bi bi-arrow-up"
-                                        role="button"
-                                        aria-hidden="true">
+                                         height="0.8em"
+                                         viewBox="0 1.2 16 16"
+                                         class="bi bi-arrow-up"
+                                         role="button"
+                                         aria-hidden="true">
                                         <path
-                                            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+                                              d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
                                     </svg>
                                     <span class="sr-only"
-                                        i18n>Aufsteigend sortiert</span>
+                                          i18n>Aufsteigend sortiert</span>
                                 </span>
                                 <span *ngIf="taskOrder === 'desc'">
                                     <svg width="1em"
@@ -147,10 +145,10 @@
                                          role="button"
                                          aria-hidden="true">
                                         <path
-                                            d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                                              d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
                                     </svg>
                                     <span class="sr-only"
-                                        i18n>Absteigend sortiert</span>
+                                          i18n>Absteigend sortiert</span>
                                 </span>
                             </span>
                         </th>
@@ -163,9 +161,7 @@
                             <a i18n-title
                                title="Formular öffnen"
                                [routerLink]="['/forms/details', task['form-id']]"
-                               i18n>
-                                Formular öffnen
-                            </a>
+                               i18n>Formular öffnen</a>
                         </td>
                         <td>{task.status, select, created {Erstellt} accessed {In Bearbeitung} submitted
                             {Abgeschlossen}}</td>
@@ -276,10 +272,10 @@
                                          role="button"
                                          aria-hidden="true">
                                         <path
-                                            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+                                              d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
                                     </svg>
                                     <span class="sr-only"
-                                        i18n>Aufsteigend sortiert</span>
+                                          i18n>Aufsteigend sortiert</span>
                                 </span>
                                 <span *ngIf="formOrder === 'desc'">
                                     <svg width="1em"
@@ -289,10 +285,10 @@
                                          role="button"
                                          aria-hidden="true">
                                         <path
-                                            d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                                              d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
                                     </svg>
                                     <span class="sr-only"
-                                        i18n>Absteigend sortiert</span>
+                                          i18n>Absteigend sortiert</span>
                                 </span>
                             </span>
                         </th>
@@ -310,10 +306,10 @@
                                          role="button"
                                          aria-hidden="true">
                                         <path
-                                            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+                                              d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
                                     </svg>
-                                    <span class="sr-only" 
-                                        i18n>Aufsteigend sortiert</span>
+                                    <span class="sr-only"
+                                          i18n>Aufsteigend sortiert</span>
                                 </span>
                                 <span *ngIf="formOrder === 'desc'">
                                     <svg width="1em"
@@ -323,10 +319,10 @@
                                          role="button"
                                          aria-hidden="true">
                                         <path
-                                            d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                                              d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
                                     </svg>
-                                    <span class="sr-only" 
-                                        i18n>Absteigend sortiert</span>
+                                    <span class="sr-only"
+                                          i18n>Absteigend sortiert</span>
                                 </span>
                             </span>
                         </th>
@@ -347,16 +343,16 @@
                             <span *ngIf="formSort && formSort === 'created'">
                                 <span *ngIf="formOrder === 'asc'">
                                     <svg width="1em"
-                                        height="0.8em"
-                                        viewBox="0 1.2 16 16"
-                                        class="bi bi-arrow-up"
-                                        role="button"
-                                        aria-hidden="true">
+                                         height="0.8em"
+                                         viewBox="0 1.2 16 16"
+                                         class="bi bi-arrow-up"
+                                         role="button"
+                                         aria-hidden="true">
                                         <path
-                                            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+                                              d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
                                     </svg>
                                     <span class="sr-only"
-                                        i18n>Aufsteigend sortiert</span>
+                                          i18n>Aufsteigend sortiert</span>
                                 </span>
                                 <span *ngIf="formOrder === 'desc'">
                                     <svg width="1em"
@@ -366,10 +362,10 @@
                                          role="button"
                                          aria-hidden="true">
                                         <path
-                                            d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                                              d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
                                     </svg>
-                                    <span class="sr-only" 
-                                        i18n>Absteigend sortiert</span>
+                                    <span class="sr-only"
+                                          i18n>Absteigend sortiert</span>
                                 </span>
                             </span>
                         </th>
