--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -50,8 +50,7 @@
                         </textarea>
                     <small id="form-descriptionHelp"
                            class="form-text text-muted"
-                           i18n>Dieser Text wird auf jeder Seite vom Formular angezeigt
-                        werden.</small>
+                           i18n>Dieser Text wird auf jeder Seite vom Formular angezeigt werden.</small>
                 </div>
 
                 <!-- form-locale-->
@@ -70,9 +69,8 @@
                     </select>
                     <small id="form-localeHelp"
                            class="form-text text-muted"
-                           i18n>Die Standardsprache welche dem Benutzer angezeigt wird. Der
-                        Benutzer hat die
-                        Möglichkeit die Sprache zu wechseln.</small>
+                           i18n>Die Standardsprache welche dem Benutzer angezeigt wird. Der Benutzer hat die Möglichkeit
+                        die Sprache zu wechseln.</small>
                 </div>
 
                 <!-- form-showQuestionNumbers-->
@@ -134,8 +132,7 @@
                            autocomplete="off">
                     <small id="form-navigateToUrlHelp"
                            class="form-text text-muted"
-                           i18n>Der Benutzer wird nach Abschluss des Formulares an diese Adresse
-                        weitergeleitet.</small>
+                           i18n>Der Benutzer wird nach Abschluss des Formulares an diese Adresse weitergeleitet.</small>
                 </div>
             </accordion-group>
 
@@ -244,8 +241,7 @@
                            i18n>Erste Seite ist Startseite</label>
                     <small id="form-firstPageIsStartedHelp"
                            class="form-text text-muted"
-                           i18n>Die erste Seite erhält einen Start Button für das
-                        Formular.</small>
+                           i18n>Die erste Seite erhält einen Start Button für das Formular.</small>
                 </div>
 
                 <!-- form-showPrevButton -->
@@ -273,8 +269,7 @@
                            i18n>Nächste Seite automatisch öffnen</label>
                     <small id="form-goNextPageAutomaticHelp"
                            class="form-text text-muted"
-                           i18n>Nach abschließen einer Seite wird automatisch die nächste
-                        geöffnet.</small>
+                           i18n>Nach abschließen einer Seite wird automatisch die nächste geöffnet.</small>
                 </div>
 
                 <!-- form-showPreviewBeforeComplete-->
@@ -295,9 +290,8 @@
                     </select>
                     <small id="form-showPreviewBeforeCompleteHelp"
                            class="form-text text-muted"
-                           i18n>Dem Benutzer kann eine Vorschau angezeigt werden seiner Antworten,
-                        bevor er das
-                        Formular final absendet.</small>
+                           i18n>Dem Benutzer kann eine Vorschau angezeigt werden seiner Antworten, bevor er das Formular
+                        final absendet.</small>
                 </div>
 
                 <!-- form-showProgressBar-->
@@ -459,8 +453,7 @@
                                    i18n>Sichtbar</label>
                             <small id="page-visibleHelp-{{ i }}"
                                    class="form-text text-muted"
-                                   i18n>Diese Option stellt ein, ob die Seite standartmäßig
-                                sichtbar ist.</small>
+                                   i18n>Diese Option stellt ein, ob die Seite standartmäßig sichtbar ist.</small>
                         </div>
 
                         <!-- page-readOnly -->
@@ -476,8 +469,7 @@
                                    i18n>Deaktiviert</label>
                             <small id="page-readOnlyHelp-{{ i }}"
                                    class="form-text text-muted"
-                                   i18n>Diese Option stellt ein, ob die Seite standartmäßig
-                                ausfüllbar ist.</small>
+                                   i18n>Diese Option stellt ein, ob die Seite standartmäßig ausfüllbar ist.</small>
                         </div>
 
                         <!-- page-maxTimeToFinish -->
@@ -493,8 +485,7 @@
                                    attr.aria-describedby="page-maxTimeToFinishHelp-{{ i }}">
                             <small id="page-maxTimeToFinishHelp-{{ i }}"
                                    class="form-text text-muted"
-                                   i18n>Diese Option überschreibt den Standartwert pro Seite
-                                aus dem Reiter
+                                   i18n>Diese Option überschreibt den Standartwert pro Seite aus dem Reiter
                                 Timer/Quiz.</small>
                         </div>
 
