--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -24,9 +24,8 @@
                 </h1>
 
                 <p class="lead"
-                   i18n>Wenn Sie eine Formular PIN erhalten haben, geben Sie diese hier ein um zum Formular
-                    zu gelangen.
-                </p>
+                   i18n>Wenn Sie eine Formular PIN erhalten haben, geben Sie diese hier ein
+                    um zum Formular zu gelangen.</p>
                 <hr class="my-4">
 
                 <div class="lead">
@@ -87,9 +86,7 @@
                 </h1>
 
                 <p class="lead"
-                   i18n>Wenn Sie ein Formular einreichen wollen finden Sie hier unsere öffentlichen
-                    Formulare.
-                </p>
+                   i18n>Wenn Sie ein Formular einreichen wollen finden Sie hier unsere öffentlichen Formulare.</p>
                 <hr class="my-4">
 
                 <div class="lead">
@@ -137,9 +134,8 @@
                 </h1>
 
                 <p class="lead"
-                   i18n>Als Notar erhalten Sie die Möglichkeit über unser Onlineportal einen digitalen
-                    Datenaustausch vorzunehmen.
-                </p>
+                   i18n>Als Notar erhalten Sie die Möglichkeit über unser Onlineportal einen digitalen Datenaustausch
+                    vorzunehmen.</p>
                 <hr class="my-4">
 
                 <div class="lead">
@@ -169,8 +165,7 @@
                 </h1>
 
                 <p class="lead"
-                   i18n>Interner Bereich für die Mitarbeiter der Landesvermessung von Niedersachsen.
-                </p>
+                   i18n>Interner Bereich für die Mitarbeiter der Landesvermessung von Niedersachsen.</p>
                 <hr class="my-4">
 
                 <div class="lead">
