--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -23,7 +23,8 @@
                         <path fill-rule="evenodd"
                               d="M7 4a.5.5 0 0 1 .5.5v.634l.549-.317a.5.5 0 1 1 .5.866L8 6l.549.317a.5.5 0 1 1-.5.866L7.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L6 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5A.5.5 0 0 1 7 4zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
                     </svg>
-                    <span i18n>&nbsp;Neues Formular</span>
+                    <span class="ml-2"
+                          i18n>Neues Formular</span>
                 </div>
 
                 <!-- modal close button -->
@@ -41,29 +42,24 @@
 
             <!-- modal body -->
             <div class="modal-body">
-                <!-- generate form -->
-                <form #newForm="ngForm"
-                      i18n-aria-label
-                      aria-label="Einstellungen zum neuen Formular"
-                      onsubmit="return false;">
-                    <!-- title -->
-                    <div class="form-group">
-                        <label for="formtitle"
-                               i18n>Formular Titel *</label>
-                        <input type="text"
-                               class="form-control"
-                               [(ngModel)]="title"
-                               [class.is-invalid]="!title"
-                               id="formtitle"
-                               name="formtitle"
-                               maxlength="200"
-                               i18n-placeholder
-                               placeholder="Mein Formular"
-                               required>
-                    </div>
+                <!-- title -->
+                <div class="form-group">
+                    <label for="formtitle"
+                           i18n>Formular Titel *</label>
+                    <input type="text"
+                           class="form-control"
+                           [(ngModel)]="title"
+                           [class.is-invalid]="!title"
+                           id="formtitle"
+                           name="formtitle"
+                           maxlength="200"
+                           i18n-placeholder
+                           placeholder="Mein Formular"
+                           required>
+                </div>
 
-                    <!-- service -->
-                    <!--<div class="form-group">
+                <!-- service -->
+                <!--<div class="form-group">
                                   <label for="formservice" i18n>Verknüpfter Dienst</label>
                                   <select class="custom-select"
                                       [(ngModel)]="service"
@@ -78,41 +74,35 @@
                                   </select>
                               </div>-->
 
-                    <!-- template -->
-                    <div class="form-group">
-                        <label for="searchtemplate"
-                                i18n>Template</label>
-                        <input type="text"
-                                class="form-control"
-                                id="searchtemplate"
-                                name="searchtemplate"
-                                [(ngModel)]="searchText"
-                                [typeahead]="templateList"
-                                [typeaheadScrollable]="true"
-                                [typeaheadOptionsInScrollableView]="5"
-                                typeaheadOptionField="title"
-                                (typeaheadOnSelect)="setTemplate($event)"
-                                (keyup)="fetchTemplates()"
-                                i18n-placeholder placeholder="Suchen">
-                    </div>
+                <!-- template -->
+                <div class="form-group">
+                    <label for="searchtemplate"
+                           i18n>Template</label>
+                    <input type="text"
+                           class="form-control"
+                           id="searchtemplate"
+                           name="searchtemplate"
+                           [(ngModel)]="searchText"
+                           [typeahead]="templateList"
+                           [typeaheadScrollable]="true"
+                           [typeaheadOptionsInScrollableView]="5"
+                           typeaheadOptionField="title"
+                           (typeaheadOnSelect)="setTemplate($event)"
+                           (keyup)="fetchTemplates()"
+                           i18n-placeholder
+                           placeholder="Suchen">
+                </div>
 
-                    <!-- tags -->
-                    <power-tagbox [(tagList)]="tagList"
-                                  [dataList]="data.tags"
-                                  tagboxLabel="Tags"></power-tagbox>
-
-                    <button type="submit"
-                            class="d-none"
-                            aria-hidden="true"
-                            disabled
-                            i18n>Absenden</button>
-                </form>
+                <!-- tags -->
+                <power-tagbox [(tagList)]="tagList"
+                              [dataList]="data.tags"
+                              tagboxLabel="Tags"></power-tagbox>
             </div>
 
             <!-- modal buttons -->
             <div class="modal-footer">
                 <label class="mr-auto text-muted"
-                        i18n>* Pflichtfeld</label>
+                       i18n>* Pflichtfeld</label>
                 <button type="button"
                         class="btn btn-success"
                         i18n-title
@@ -131,7 +121,8 @@
                         <path fill-rule="evenodd"
                               d="M7 4a.5.5 0 0 1 .5.5v.634l.549-.317a.5.5 0 1 1 .5.866L8 6l.549.317a.5.5 0 1 1-.5.866L7.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L6 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5A.5.5 0 0 1 7 4zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
                     </svg>
-                    <span i18n>&nbsp;Erstellen</span>
+                    <span class="ml-2"
+                          i18n>Erstellen</span>
                 </button>
             </div>
         </div>
