--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -39,7 +39,8 @@
                 <path fill-rule="evenodd"
                       d="M11.537 5.146a.5.5 0 0 1 0 .708l-5 5a.5.5 0 0 1-.708-.708l5-5a.5.5 0 0 1 .707 0z" />
             </svg>
-            <span i18n>&nbsp;Zurück</span>
+            <span class="ml-2"
+                  i18n>Zurück</span>
         </button>
     </div>
 
@@ -103,8 +104,8 @@
                     <path fill-rule="evenodd"
                           d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
                 </svg>
-                <span class="d-none d-sm-inline"
-                      i18n>&nbsp;Bearbeiten</span>
+                <span class="d-none d-sm-inline ml-2"
+                      i18n>Bearbeiten</span>
             </button>
             <button type="button"
                     class="btn btn-primary btn-sm mr-2"
@@ -129,8 +130,8 @@
                     <path fill-rule="evenodd"
                           d="M5.5 1.5A.5.5 0 0 0 5 1H1.5a.5.5 0 0 0-.5.5V5a.5.5 0 0 0 1 0V2h3a.5.5 0 0 0 .5-.5z" />
                 </svg>
-                <span class="d-none d-sm-inline"
-                      i18n>&nbsp;Vorschau</span>
+                <span class="d-none d-sm-inline ml-2"
+                      i18n>Vorschau</span>
             </button>
             <button type="button"
                     class="btn btn-primary btn-sm mr-2"
@@ -149,8 +150,8 @@
                     <path fill-rule="evenodd"
                           d="M7.646 10.854a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0-.708-.708L8.5 9.293V5.5a.5.5 0 0 0-1 0v3.793L6.354 8.146a.5.5 0 1 0-.708.708l2 2z" />
                 </svg>
-                <span class="d-none d-sm-inline"
-                      i18n>&nbsp;Formular exportieren</span>
+                <span class="d-none d-sm-inline ml-2"
+                      i18n>Formular exportieren</span>
             </button>
             <button type="button"
                     class="btn btn-primary btn-sm mr-2"
@@ -170,8 +171,8 @@
                     <path fill-rule="evenodd"
                           d="M8 5.754a2.246 2.246 0 1 0 0 4.492 2.246 2.246 0 0 0 0-4.492zM4.754 8a3.246 3.246 0 1 1 6.492 0 3.246 3.246 0 0 1-6.492 0z" />
                 </svg>
-                <span class="d-none d-sm-inline"
-                      i18n>&nbsp;Einstellungen</span>
+                <span class="d-none d-sm-inline ml-2"
+                      i18n>Einstellungen</span>
             </button>
             <button type="button"
                     class="btn btn-success btn-sm mr-2"
@@ -189,8 +190,8 @@
                     <path fill-rule="evenodd"
                           d="M1.018 7.5h2.49c.037-1.07.189-2.087.437-3.008a9.124 9.124 0 0 1-1.565-.667A6.964 6.964 0 0 0 1.018 7.5zM3.05 3.049c.362.184.763.349 1.198.49.142-.384.304-.744.481-1.078a6.7 6.7 0 0 1 .597-.933A7.01 7.01 0 0 0 3.051 3.05zM8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm-.5 1.077c-.67.204-1.335.82-1.887 1.855-.143.268-.276.56-.395.872.705.157 1.473.257 2.282.287V1.077zm0 4.014c-.91-.03-1.783-.145-2.591-.332a12.344 12.344 0 0 0-.4 2.741H7.5V5.091zm1 2.409V5.091c.91-.03 1.783-.145 2.591-.332.223.827.364 1.754.4 2.741H8.5zm-1 1H4.51c.035.987.176 1.914.399 2.741A13.596 13.596 0 0 1 7.5 10.91V8.5zm1 2.409V8.5h2.99a12.343 12.343 0 0 1-.399 2.741A13.596 13.596 0 0 0 8.5 10.91zm-1 1c-.81.03-1.577.13-2.282.287.12.312.252.604.395.872.552 1.035 1.218 1.65 1.887 1.855V11.91zm-2.173 2.563a6.695 6.695 0 0 1-.597-.933 8.857 8.857 0 0 1-.481-1.078 8.356 8.356 0 0 0-1.198.49 7.01 7.01 0 0 0 2.276 1.52zM2.38 12.175c.47-.258.995-.482 1.565-.667A13.36 13.36 0 0 1 3.508 8.5h-2.49a6.964 6.964 0 0 0 1.362 3.675zm8.293 2.297a7.01 7.01 0 0 0 2.275-1.521 8.353 8.353 0 0 0-1.197-.49 8.859 8.859 0 0 1-.481 1.078 6.688 6.688 0 0 1-.597.933zm.11-2.276A12.63 12.63 0 0 0 8.5 11.91v3.014c.67-.204 1.335-.82 1.887-1.855.143-.268.276-.56.395-.872zm1.272-.688c.57.185 1.095.409 1.565.667A6.964 6.964 0 0 0 14.982 8.5h-2.49a13.355 13.355 0 0 1-.437 3.008zm.437-4.008h2.49a6.963 6.963 0 0 0-1.362-3.675c-.47.258-.995.482-1.565.667.248.92.4 1.938.437 3.008zm-.74-3.96a8.854 8.854 0 0 0-.482-1.079 6.692 6.692 0 0 0-.597-.933c.857.355 1.63.875 2.275 1.521a8.368 8.368 0 0 1-1.197.49zm-.97.264c-.705.157-1.473.257-2.282.287V1.077c.67.204 1.335.82 1.887 1.855.143.268.276.56.395.872z" />
                 </svg>
-                <span class="d-none d-sm-inline"
-                      i18n>&nbsp;Veröffentlichen</span>
+                <span class="d-none d-sm-inline ml-2"
+                      i18n>Veröffentlichen</span>
             </button>
             <button type="button"
                     class="btn btn-secondary btn-sm mr-2"
@@ -208,8 +209,8 @@
                     <path fill-rule="evenodd"
                           d="M12.643 15C13.979 15 15 13.845 15 12.5V5H1v7.5C1 13.845 2.021 15 3.357 15h9.286zM6 7a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1H6zM.8 1a.8.8 0 0 0-.8.8V3a.8.8 0 0 0 .8.8h14.4A.8.8 0 0 0 16 3V1.8a.8.8 0 0 0-.8-.8H.8z" />
                 </svg>
-                <span class="d-none d-sm-inline"
-                      i18n>&nbsp;Archivieren</span>
+                <span class="d-none d-sm-inline ml-2"
+                      i18n>Archivieren</span>
             </button>
             <button type="button"
                     class="btn btn-danger btn-sm"
@@ -227,15 +228,15 @@
                     <path fill-rule="evenodd"
                           d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z" />
                 </svg>
-                <span class="d-none d-sm-inline"
-                      i18n>&nbsp;Löschen</span>
+                <span class="d-none d-sm-inline ml-2"
+                      i18n>Löschen</span>
             </button>
         </div>
     </div>
 
     <!-- tasks list -->
     <div class="card bg-light"
-         *ngIf="data.tasksList">
+         *ngIf="data.tasksList && data.form.status !== 'created'">
         <div class="card-header h5">
             <svg width="1em"
                  height="1em"
@@ -247,7 +248,8 @@
                 <path fill-rule="evenodd"
                       d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm-3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
             </svg>
-            <span i18n>&nbsp;Antworten</span>
+            <span class="ml-2"
+                  i18n>Antworten</span>
         </div>
 
         <div class="card-body table-responsive p-0">
@@ -350,8 +352,8 @@
                                     <path
                                           d="M4.5 1A1.5 1.5 0 0 0 3 2.5V3h4v-.5A1.5 1.5 0 0 0 5.5 1h-1zM7 4v1h2V4h4v.882a.5.5 0 0 0 .276.447l.895.447A1.5 1.5 0 0 1 15 7.118V13H9v-1.5a.5.5 0 0 1 .146-.354l.854-.853V9.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v.793l.854.853A.5.5 0 0 1 7 11.5V13H1V7.118a1.5 1.5 0 0 1 .83-1.342l.894-.447A.5.5 0 0 0 3 4.882V4h4zM1 14v.5A1.5 1.5 0 0 0 2.5 16h3A1.5 1.5 0 0 0 7 14.5V14H1zm8 0v.5a1.5 1.5 0 0 0 1.5 1.5h3a1.5 1.5 0 0 0 1.5-1.5V14H9zm4-11H9v-.5A1.5 1.5 0 0 1 10.5 1h1A1.5 1.5 0 0 1 13 2.5V3z" />
                                 </svg>
-                                <span class="d-none d-sm-inline"
-                                      i18n>&nbsp;Ergebnisse</span>
+                                <span class="d-none d-sm-inline ml-2"
+                                      i18n>Ergebnisse</span>
                             </button>
                             <button type="button"
                                     class="btn btn-danger btn-sm"
@@ -369,8 +371,8 @@
                                     <path fill-rule="evenodd"
                                           d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z" />
                                 </svg>
-                                <span class="d-none d-sm-inline"
-                                      i18n>&nbsp;Löschen</span>
+                                <span class="d-none d-sm-inline ml-2"
+                                      i18n>Löschen</span>
                             </button>
                         </td>
                     </tr>
@@ -400,8 +402,8 @@
                     <path fill-rule="evenodd"
                           d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z" />
                 </svg>
-                <span class="d-none d-sm-inline"
-                      i18n>&nbsp;Neue PIN erstellen</span>
+                <span class="d-none d-sm-inline ml-2"
+                      i18n>Neue PIN erstellen</span>
             </button>
 
             <button type="button"
@@ -421,8 +423,8 @@
                     <path fill-rule="evenodd"
                           d="M7.646 10.854a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0-.708-.708L8.5 9.293V5.5a.5.5 0 0 0-1 0v3.793L6.354 8.146a.5.5 0 1 0-.708.708l2 2z" />
                 </svg>
-                <span class="d-none d-sm-inline"
-                      i18n>&nbsp;Ergebnisse (CSV)</span>
+                <span class="d-none d-sm-inline ml-2"
+                      i18n>Ergebnisse (CSV)</span>
             </button>
 
             <!-- Tasks Pagination -->
@@ -453,13 +455,16 @@
 </main>
 
 <!-- new task modal -->
-<power-forms-details-maketask #maketask [(data)]="data"></power-forms-details-maketask>
+<power-forms-details-maketask #maketask
+                              [(data)]="data"></power-forms-details-maketask>
 
 <!-- publish modal -->
-<power-forms-details-publish #publish [(data)]="data"></power-forms-details-publish>
+<power-forms-details-publish #publish
+                             [(data)]="data"></power-forms-details-publish>
 
 <!-- comment modal -->
-<power-forms-details-comment #comment [(data)]="data"></power-forms-details-comment>
+<power-forms-details-comment #comment
+                             [(data)]="data"></power-forms-details-comment>
 
 <!-- preview modal -->
 <power-forms-surveyjs-preview *ngIf="data.form"
@@ -468,4 +473,5 @@
 </power-forms-surveyjs-preview>
 
 <!-- share form modal -->
-<power-forms-details-settings #settings [(data)]="data"></power-forms-details-settings>
+<power-forms-details-settings #settings
+                              [(data)]="data"></power-forms-details-settings>
