--- a/power/src/app/fragebogen/editor/condition-modal/condition-modal.component.html
+++ b/power/src/app/fragebogen/editor/condition-modal/condition-modal.component.html
@@ -1,8 +1,8 @@
 <button type="button"
         class="btn btn-light text-primary mr-2"
         i18n-title
-        title="Sichtbarkeitsbedingung"
-        (click)="conditionmodal.open('Sichtbarkeitsbedingung')">
+        title="Sichtbarkeitsbedingung für Antwort oder Unterfrage einstellen"
+        (click)="conditionmodal.open(title)">
     <svg width="1em"
          height="1em"
          viewBox="0 0 16 16"
@@ -15,7 +15,7 @@
               d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z" />
     </svg>
     <span class="sr-only"
-          i18n>Sichtbarkeitsbedingung</span>
+          i18n>Sichtbarkeitsbedingung für Antwort oder Unterfrage einstellen</span>
 </button>
 
 <power-modalmini #conditionmodal
