--- a/power/src/app/fragebogen/editor/value/value.component.html
+++ b/power/src/app/fragebogen/editor/value/value.component.html
@@ -12,7 +12,5 @@
             i18n-title
             title="Zurücksetzen"
             (click)="resetValue()"
-            i18n>
-        Zurücksetzen
-    </button>
+            i18n>Zurücksetzen</button>
 </div>
